@@ -9,6 +9,9 @@ General
 * upgraded to Felix 2.0.2
 * upgraded to Knopflerfish 3.0.0.beta3
 
+Package org.springframework.osgi.bundle
+* added sticky attribute to ServiceReference annotation
+
 
 Changes in version 2.0.0 M1 (2009-09-28)
 ----------------------------------------
